--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "coh-builder",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://thebobbyllama.github.io/coh-builder",
+  "homepage": "https://thebobbyllama.github.io/coh-builder",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
