--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "base64-js": "^1.5.1",
     "json-loader": "^0.5.7",
     "pako": "^2.0.4",
     "react": "^17.0.2",
